Bug 397937 - Kmail wrong trash icon
Summary: Kmail wrong trash icon
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: UI (other bugs)
Version First Reported In: 5.9.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-08-27 17:05 UTC by dS810
Modified: 2018-09-14 17:48 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.9.2
Sentry Crash Report:


Attachments
screenshot (9.45 KB, image/png)
2018-08-27 17:05 UTC, dS810
Details

Note You need to log in before you can comment on or make changes to this bug.
Description dS810 2018-08-27 17:05:56 UTC
Created attachment 114638 [details]
screenshot

Trash button has wrong trash icon (size: 32px):
see screenshot
Comment 1 boaz.dodin 2018-08-28 11:46:33 UTC
What are the OS and Kmail versions?
Comment 2 Laurent Montel 2018-08-28 19:51:45 UTC
it's a breeze bug or it's normal.
But it's not a kmail bug for sure.
Comment 3 dS810 2018-08-30 18:28:07 UTC
(In reply to boaz.dodin from comment #1)
> What are the OS and Kmail versions?

ArchLinux; KMail Version 5.9.0
Comment 4 Christoph Feck 2018-09-13 18:06:44 UTC
I suggest to not use the 'trash' (location icon), but 'edit-delete' or 'edit-delete-shred' (action icon).
Comment 5 Laurent Montel 2018-09-14 11:26:06 UTC
Git commit 70158417737439afa2a2c026b311fccfb0d7f145 by Laurent Montel.
Committed on 14/09/2018 at 11:25.
Pushed by mlaurent into branch 'Applications/18.08'.

Fix Bug 397937 - Kmail wrong trash icon

FIXED-IN: 5.9.2

M  +3    -3    src/kmmainwidget.cpp
M  +1    -1    src/kmreadermainwin.cpp
M  +1    -1    src/util.cpp

https://commits.kde.org/kmail/70158417737439afa2a2c026b311fccfb0d7f145
Comment 6 Laurent Montel 2018-09-14 11:27:21 UTC
Git commit cece8f86a7b96441aaa24f392c8874231de01172 by Laurent Montel.
Committed on 14/09/2018 at 11:27.
Pushed by mlaurent into branch 'master'.

Fix Bug 397937 - Kmail wrong trash icon

FIXED-IN: 5.9.2

M  +3    -3    src/kmmainwidget.cpp
M  +1    -1    src/kmreadermainwin.cpp
M  +1    -1    src/util.cpp

https://commits.kde.org/kmail/cece8f86a7b96441aaa24f392c8874231de01172
Comment 7 dS810 2018-09-14 17:48:41 UTC
(In reply to Laurent Montel from comment #6)

thanks for fixing it!!!