Fix Bug 397937 - Kmail wrong trash icon

FIXED-IN: 5.9.2
BUG: 397937